# memeparser

./: README.md  pyproject.toml
memeparser/: __init__.py
memeparser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_memeparser.py
